[project]
name = "qwen"
version = "0.1.0"
description = "Process images using Qwen2-VL-7B model with optional resizing and custom prompt."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio-client>=1.3.0",
    "jsonschema>=4.23.0",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "xattr>=1.1.0",
]
